footer fixed to bottom of window when content is too short.

--- a/app/assets/stylesheets/import/_footer.less
+++ b/app/assets/stylesheets/import/_footer.less
@@ -8,7 +8,7 @@
   margin-top: @site_padding;
   overflow: hidden;
 
-  &.sticky {
+  &.fixed {
     position: fixed;
     bottom: 0;
     left: 0;
