--- a/app/assets/stylesheets/mixins/_grid.less
+++ b/app/assets/stylesheets/mixins/_grid.less
@@ -57,4 +57,5 @@ EASY CLASSES
 .col_4 { .grid_column(4); }
 .col_6 { .grid_column(6); }
 .col_8 { .grid_column(8); }
+.col_8 { .grid_column(10); }
 
